# swagger/swagger.yaml
@@ -188,6 +188,62 @@ paths:
               message:
                 type: "string"
                 description: "The message associated to the error code"
+  /users/logout:    
+    x-swagger-router-controller: users
+    post:
+      tags:
+      - "Users"
+      summary: "logout as a user"
+      operationId: logout
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "User object that needs to be logout"
+        required: true
+        schema:
+          $ref: "#/definitions/UserLogout"
+      responses:
+        201:
+          description: "Successfully logged out user"
+          schema:
+            type: "object"
+            properties:
+              data:
+                $ref: "#/definitions/UserLoggedIn"
+              message:
+                type: "string"
+        404:
+          description: "User not exist"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                description: "The http status code"
+              code:
+                type: "integer"
+                description: "The error code"
+              message:
+                type: "string"
+                description: "The message associated to the error code"
+        400:
+          description: "Invalid Input"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                description: "The http status code"
+              code:
+                type: "integer"
+                description: "The error code"
+              message:
+                type: "string"
+                description: "The message associated to the error code"
   /users/login:    
     x-swagger-router-controller: users
     post:
@@ -465,6 +521,15 @@ definitions:
       password:
         type: "string"
         description: "The password of the user"
+  UserLogout:
+    type: "object"
+    description: "The model of a user object to logout a user"
+    required:
+      - "userName"
+    properties:
+      userName:
+        type: "string"
+        description: "The username of the user. It will be used for logout purpose"
   UserLogin:
     type: "object"
     description: "The model of a user object to login a user"
